exports[`Collection component should match the previous snapshot 1`] = `
<div>
   
  <div
    className="dLMdGK">
    <span>
      <h3 />
      <button
        onClick={[Function]}>
        Delete
      </button>
      <hr />
    </span>
    <div>
       
      <div
        className="DFkvH">
        <ul
          className="list-group">
          <li
            className="list-group-item">
            <span>
              <h4>
                POST
              </h4>
              <button
                onClick={[Function]}>
                Delete
              </button>
            </span>
            <p
              className="list-group-item-text">
              www.foo.no
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collections component should match the previous snapshot 1`] = `
<div
  className="panel panel-default"
  id={undefined}>
  <div
    className="panel-heading">
    <span
      className="clearfix">
      <button
        className="pull-right bFhpey"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}>
        <div
          className="bEVxIZ">
          <div
            className="ddxWyy" />
          <span
            className="jsYWMN">
            Add new collection
          </span>
        </div>
        <i
          className="fa fa-plus"
          role="presentation" />
      </button>
    </span>
  </div>
  <div
    className="panel-body">
    <span>
      <div>
         
        <div
          className="dLMdGK">
          <span>
            <h3>
              Collection
            </h3>
            <button
              onClick={[Function]}>
              Delete
            </button>
            <hr />
          </span>
          <div>
             
            <div
              className="DFkvH">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <span>
                    <h4>
                      POST
                    </h4>
                    <button
                      onClick={[Function]}>
                      Delete
                    </button>
                  </span>
                  <p
                    className="list-group-item-text">
                    www.foo.no
                  </p>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div>
         
        <div
          className="dLMdGK">
          <span>
            <h3>
              Collection 2
            </h3>
            <button
              onClick={[Function]}>
              Delete
            </button>
            <hr />
          </span>
          <div>
             
            <div
              className="DFkvH">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <span>
                    <h4>
                      POST
                    </h4>
                    <button
                      onClick={[Function]}>
                      Delete
                    </button>
                  </span>
                  <p
                    className="list-group-item-text">
                    www.foo.no
                  </p>
                </li>
              </ul>
            </div>
          </div>
          <div>
             
            <div
              className="DFkvH">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <span>
                    <h4>
                      POST
                    </h4>
                    <button
                      onClick={[Function]}>
                      Delete
                    </button>
                  </span>
                  <p
                    className="list-group-item-text">
                    www.bar.no
                  </p>
                </li>
              </ul>
            </div>
          </div>
          <div>
             
            <div
              className="DFkvH">
              <ul
                className="list-group">
                <li
                  className="list-group-item">
                  <span>
                    <h4>
                      POST
                    </h4>
                    <button
                      onClick={[Function]}>
                      Delete
                    </button>
                  </span>
                  <p
                    className="list-group-item-text">
                    www.baz.no
                  </p>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;
